<?xml version="1.0"?>
<package>
  <name>extractor_node</name>
  <version>1.0.0</version>
  <description>Extractor Node, which connects to the buffer and extracts the 
  3D information of a stereo pair using the stereo_image_proc library</description>

  <license>GPL</license>

  <url type="website">https://github.com/javsalgar/cloud_3dpc_extractor</url>
  <url type="bugtracker">https://github.com/javsalgar/cloud_3dpc_extractor/issues</url>

  <author email="jsalmeron2@us.es">Javier J. Salmeron-Garcia</author>
  <maintainer email="jsalmeron2@us.es">Javier J. Salmeron-Garcia</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cloud_3dpc_extractor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <build_depend>bond</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>cloud_3dpc_extractor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bond</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>roslaunch</run_depend>

</package>
